--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -16,3 +16,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+#app {
+  height: 100vh;
+  background-image: url(../assets/img/main_background.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
