feat: add more utils variables

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,5 +1,5 @@
 // Element
-$element-width: 4rem;
+$element-width: 4.08rem;
 $element-height: 4.7rem;
 
 // Colors
@@ -7,8 +7,15 @@ $dark: #212529;
 $light: #f8f9fa;
 $blue: #003b6f;
 
+// Radius
+$radius-sm: .25rem;
+$radius: .4rem;
+
 // Timers
 $time-fast: .1s;
 
 // Transitions
 $default-transition: all $time-fast linear;
+
+// Fonts
+$default-font: 'Quicksand', sans-serif;
