--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -1,3 +1,5 @@
+@use './variables';
+
 *,
 *::before,
 *::after {
@@ -15,13 +17,10 @@ body {
   line-height: 1.5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: variables.$dark;
 }
 
 #app {
   height: 100vh;
-  background-image: url(../assets/img/main_background.jpg);
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
   overflow: hidden;
 }
