feat: add smoth shadown on menu

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -23,3 +23,7 @@ $default-transition: all $time-fast linear;
 
 // Fonts
 $default-font: 'Quicksand', sans-serif;
+
+// Shadows
+$default-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px,
+  rgba(17, 17, 26, 0.05) 0px 8px 32px;
