--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -2,6 +2,8 @@
 $element-width: 4.08rem;
 $element-height: 4.7rem;
 
+$menu-width: 3rem;
+
 // Colors
 $dark: #212529;
 $light: #f8f9fa;
@@ -27,3 +29,5 @@ $default-font: 'Quicksand', sans-serif;
 // Shadows
 $default-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px,
   rgba(17, 17, 26, 0.05) 0px 8px 32px;
+$small-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+  rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
