--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -25,6 +25,7 @@ $default-transition: all $time-fast linear;
 
 // Fonts
 $default-font: 'Quicksand', sans-serif;
+$secondary-font: 'Open Sans';
 
 // Shadows
 $default-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px,
