feat: change color shade of alkali

--- a/src/style/_elements.scss
+++ b/src/style/_elements.scss
@@ -1,6 +1,6 @@
 $colors: (
   'noble_gas': #93ceed,
-  'alkali_metal': #ff6666,
+  'alkali_metal': #ff7d7d,
   'alkaline_earth_metal': #fedead,
   'metalloid': #cccc9a,
   'nonmetal': #f1ff90,
