refactor: update style variables

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -10,7 +10,7 @@ $menu-width: 3rem;
 // Colors
 $dark: #212529;
 $light: #f8f9fa;
-$blue: #003b6f;
+$blue: #64a1f4;
 $light-gray: #ced4da;
 
 // Borders
